complete intro section

--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/c47d6eb686.js" crossorigin="anonymous"></script>
     <title>Portfolio Website</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <!-- Header Section -->
-    <header>
+    <header class="header-section">
         <!-- Logo and hamburger -->
         <img src="img/logo.png" alt="" class="logo">
         <button class="toggle-nav" aria-label="toggle-navigation">
@@ -30,14 +31,14 @@
     <main>
         <!-- Intro Section -->
         <section class="intro-section" id="intro">
-            <h1>Hi, I am <strong>Ben Nneji</strong></h1>
-            <p>Front-end Dev</p>
-            <img src="img/ben-nneji-01.png" alt="">
+            <h1 class="section-title intro--title">Hi, I am <br><strong>Ben Nneji</strong></h1>
+            <p class="section-subtitle intro--subtitle">Front-end Dev</p>
+            <img src="img/ben-nneji-01.png" alt="" class="intro--img">
         </section>
 
         <!-- Services Section -->
         <section class="services-section" id="services">
-            <h2>What I do</h2>
+            <h2 class="section-title">What I do</h2>
             <div class="services">
 
                 <!-- Service 01 -->
@@ -65,8 +66,8 @@
 
         <!-- Profile Section -->
         <section class="profile-section" id="profile">
-            <h2>Who I am</h2>
-            <p>I build modern, elegant and functional websites</p>
+            <h2 class="section-title">Who I am</h2>
+            <p class="section-subtitle profile--subtitle">I build modern, elegant and functional websites</p>
             <div class="profile--body">
                 <p>I put in the work to leave each client happy and satisfied. I have experience building websites that are fast, responsive, and search engine optimized. By paying careful attention to detail, I build websites that not only look awesome, but are also free from typos.</p>
                 <p>I built my first website in 2007 using Dreamweaver and Fireworks. Since then, I have acquired and worked with other front-end skills such as HTML, CSS, JavaScript, and React. I do my best to keep up with trends and to follow best practices.</p>
@@ -76,8 +77,8 @@
 
         <!-- Portfolio Section -->
         <section class="portfolio-section" id="portfolio">
-            <h2>My Projects</h2>
-            <p>Here are some of my projects</p>
+            <h2 class="section-title">My Projects</h2>
+            <p class="section-subtitle">Here are some of my projects</p>
             <div class="projects">
 
                 <!-- Project 01 -->
