complete services section

--- a/index.html
+++ b/index.html
@@ -32,25 +32,25 @@
         <!-- Intro Section -->
         <section class="intro-section" id="intro">
             <h1 class="section-title intro--title">Hi, I am <br><strong>Ben Nneji</strong></h1>
-            <p class="section-subtitle intro--subtitle">Front-end Dev</p>
+            <p class="section-subtitle intro--subtitle">front-end dev</p>
             <img src="img/ben-nneji-01.png" alt="" class="intro--img">
         </section>
 
         <!-- Services Section -->
         <section class="services-section" id="services">
-            <h2 class="section-title">What I do</h2>
+            <h2 class="section-title services--title">What I do</h2>
             <div class="services">
 
                 <!-- Service 01 -->
                 <div class="service">
                     <h3>Web Development</h3>
-                    <p>I have experience building websites that are not only appealing, but are also fast and responsive, with all the required functionalities in place.</p>
+                    <p>I have experience building websites that are not only appealing, but also fast and responsive, with all the required functionalities in place.</p>
                 </div>
 
                 <!-- Service 02 -->
                 <div class="service">
                     <h3>UI/UX Design</h3>
-                    <p>I work with a team experienced in designing various types of websites, from blogs to ecommerce websites. So, you are absolutely in good hands!</p>
+                    <p>I work with a team experienced in designing various types of websites, from blogs to e-commerce websites. So, you are absolutely in good hands!</p>
                 </div>
 
                 <!-- Service 03 -->
