complete profile section

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <!-- Service 03 -->
                 <div class="service">
                     <h3>App Development</h3>
-                    <p>Mobile apps are the rage! I work with a team of developers that are experienced in designing and building mobile apps that are user-friendly and intuitive.</p>
+                    <p>I work with a team of developers that are experienced in designing and building mobile apps that are user-friendly and intuitive.</p>
                 </div>
 
             </div>
@@ -66,13 +66,13 @@
 
         <!-- Profile Section -->
         <section class="profile-section" id="profile">
-            <h2 class="section-title">Who I am</h2>
+            <h2 class="section-title profile--title">Who I am</h2>
             <p class="section-subtitle profile--subtitle">I build modern, elegant and functional websites</p>
             <div class="profile--body">
-                <p>I put in the work to leave each client happy and satisfied. I have experience building websites that are fast, responsive, and search engine optimized. By paying careful attention to detail, I build websites that not only look awesome, but are also free from typos.</p>
-                <p>I built my first website in 2007 using Dreamweaver and Fireworks. Since then, I have acquired and worked with other front-end skills such as HTML, CSS, JavaScript, and React. I do my best to keep up with trends and to follow best practices.</p>
+                <p>I have experience building websites that are fast, responsive, and search engine optimized. By paying careful attention to detail, I build websites that not only look awesome, but are also free from typos.</p>
+                <p>I built my first website in 2007 using Dreamweaver and Fireworks. Since then, I have worked with other front-end skills such as HTML, CSS, and JavaScript. I do my best to keep up with trends and to follow best practices.</p>
             </div>
-            <img src="img/ben-nneji-02.png" alt="">
+            <img src="img/ben-nneji-02.png" alt="" class="profile-img">
         </section>
 
         <!-- Portfolio Section -->
