complete home page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Header Section -->
     <header class="header-section">
         <!-- Logo and hamburger -->
-        <img src="img/logo.png" alt="" class="logo">
+        <img src="img/logo-green.png" alt="" class="logo">
         <button class="toggle-nav" aria-label="toggle-navigation">
             <span class="hamburger"></span>
         </button>
@@ -43,19 +43,19 @@
 
                 <!-- Service 01 -->
                 <div class="service">
-                    <h3>Web Development</h3>
+                    <h3 class="services--subtitle">Web Development</h3>
                     <p>I have experience building websites that are not only appealing, but also fast and responsive, with all the required functionalities in place.</p>
                 </div>
 
                 <!-- Service 02 -->
                 <div class="service">
-                    <h3>UI/UX Design</h3>
+                    <h3 class="services--subtitle">UI/UX Design</h3>
                     <p>I work with a team experienced in designing various types of websites, from blogs to e-commerce websites. So, you are absolutely in good hands!</p>
                 </div>
 
                 <!-- Service 03 -->
                 <div class="service">
-                    <h3>App Development</h3>
+                    <h3 class="services--subtitle">App Development</h3>
                     <p>I work with a team of developers that are experienced in designing and building mobile apps that are user-friendly and intuitive.</p>
                 </div>
 
@@ -78,7 +78,7 @@
         <!-- Portfolio Section -->
         <section class="portfolio-section" id="portfolio">
             <h2 class="section-title">My Projects</h2>
-            <p class="section-subtitle">Here are some of my projects</p>
+            <p class="section-subtitle portfolio--subtitle">Here are some of my projects</p>
             <div class="projects">
 
                 <!-- Project 01 -->
@@ -118,7 +118,7 @@
     <!-- Footer -->
     <footer class="footer">
         <!-- Email -->
-        <a href="mailto:nnejiben@gmail.com">nnejiben@gmail.com</a>
+        <a href="mailto:nnejiben@gmail.com" class="footer--email-link">nnejiben@gmail.com</a>
         <ul class="social-list">
 
             <!-- Social Icon 01 -->
@@ -149,5 +149,8 @@
             
         </ul>
     </footer> 
+
+    <script src="js/index.js"></script>
+
 </body>
 </html>
