--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
 
         <!-- Portfolio Section -->
         <section class="portfolio-section" id="portfolio">
-            <h2 class="section-title">My Projects</h2>
-            <p class="section-subtitle portfolio--subtitle">Here are some of my projects</p>
+            <h2 class="section-title">My Work</h2>
+            <p class="section-subtitle portfolio--subtitle">Here are some of my work</p>
             <div class="projects">
 
                 <!-- Project 01 -->
