--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://kit.fontawesome.com/c47d6eb686.js" crossorigin="anonymous"></script>
     <title>Portfolio Website</title>
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="icon" href="img/logo.png" type="image/png">
+    <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 <body>
     <!-- Header Section -->
