--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Header Section -->
     <header class="header-section">
         <!-- Logo and hamburger -->
-        <a href="index.html"><img src="img/logo-green.png" alt="" class="logo"></a>
+        <a href="techyben.com"><img src="img/logo-green.png" alt="" class="logo"></a>
         <button class="toggle-nav" aria-label="toggle-navigation">
             <span class="hamburger"></span>
         </button>
