--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li class="nav--item"><a href="#intro" class="nav--link">Home</a></li>
                 <li class="nav--item"><a href="#services" class="nav--link">My Services</a></li>
                 <li class="nav--item"><a href="#profile" class="nav--link">About Me</a></li>
-                <li class="nav--item"><a href="#portfolio" class="nav--link">My Work</a></li>
+                <li class="nav--item nav--item_work"><a href="#portfolio" class="nav--link">My Work</a></li>
             </ul>
         </nav>
     </header>
